add abstract, biblio and change name

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,155 +1,213 @@
 %[http://www.planalto.gov.br/ccivil_03/LEIS/L9503.htm]
 %[Manual de direção defensiva DENATRAN]
-%[http://www.denatran.gov.br/index.php/estatistica/610-frota-2017].
-%[http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/]
-%[https://www.researchgate.net/profile/Vinicius_Ferreira3/publication/237480019_Comportamentos_no_transito_e_causas_da_agressividade/links/02e7e528bc018b2f72000000/Comportamentos-no-transito-e-causas-da-agressividade.pdf] 
-%[https://singep.org.br/6singep/resultado/406.pdf] [http://www2.fm.usp.br/gdc/docs/iof_89_estressetrans.pdf].
+%[https://www.researchgate.net/profile/Vinicius_Ferreira3/publication/237480019_Comportamentos_no_transito_e_causas_da_agressividade/links/02e7e528bc018b2f72000000/Comportamentos-no-transito-e-causas-da-agressividade.pdf]
+%[http://www2.fm.usp.br/gdc/docs/iof_89_estressetrans.pdf].
+%[https://singep.org.br/6singep/resultado/406.pdf] 
 %[http://www.cetsp.com.br/media/391986/msuvol01_introducaorev01.pdf].
 %[http://meusite.mackenzie.br/professor_cucci/ManualSemaforos2014.pdf].
-%[Michael Barr. Programming Embedded Systems in C and C++. cap1].
-%[http://www.eletrica.ufpr.br/mehl/te200/aulas/embarcados.pdf].
+%https://docente.ifsc.edu.br/rafael.grebogi/MaterialDidatico/Mecatronica/Microcontroladores/ebook%20-%20microcontrolador%208051-%20detalhado.pdf [Nicolosi, Denys E. C. Microcontrolador 8051 detalhado, 6a Ed. Editora Érica]
+%http://www.cetsp.com.br/media/20650/nt%20163%20revisado.pdf
+% [M.D. Singh, K.B. Khanchandani, Power Electronics, Second Edition, Tata McGraw-Hill, New Delhi, 2007, pages 148-152]
+%[Rudolf F. Graf (1999). Modern dictionary of electronics. Newnes. ISBN 0-7506-9866-7.]
+%[http://meusite.mackenzie.br/professor_cucci/ManualSemaforos2014.pdf]. 
+%[http://ww1.microchip.com/downloads/en/DeviceDoc/30325b.pdf]
 %[Osborne, Adam (1980). An Introduction to Microcomputers. Volume 1: Basic Concepts (2nd ed.). Berkeley, California: Osborne-McGraw Hill.].
+%[Michael Barr. Programming Embedded Systems in C and C++. cap1].
 %[http://www.intel4004.com/The_MOS_Silicon_Gate_Technology_and_the_First_Microprocessors.pdf em http://www.intel4004.com/].
+%[Gustavo Souto de Sá e Souza. Microcontroladores PIC. 2018. 87 slides. Disponivel em http://www.emc.ufg.br/~jwilson/pdf/4_Micro_Parte_4_(PIC)_Introducao.pdf]
+%http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/
+%https://www.civil.iitb.ac.in/tvm/nptel/tselnw61.pdf
+%https://sci-hub.tw/https://ieeexplore.ieee.org/document/69966
+%https://sci-hub.tw/https://ieeexplore.ieee.org/document/1622746
+%https://sci-hub.tw/https://www.sciencedirect.com/science/article/pii/S0968090X00000474?via%3Dihub
+%[http://www.eletrica.ufpr.br/mehl/te200/aulas/embarcados.pdf].
+%[http://microchipdeveloper.com/8bit:dac]
+%https://inf.ufes.br/~zegonc/material/Introducao_a_Computacao/CPU_Microprocessadores_8085.pdf
+%[http://ww1.microchip.com/downloads/en/DeviceDoc/60001525A.pdf].
+
+
+%[http://www.denatran.gov.br/index.php/estatistica/610-frota-2017].
 % [http://iris.sel.eesc.usp.br/sel433a/Micros.pdf].
 %http://iris.sel.eesc.usp.br/sel433a/Micros.pdf].
-%[http://ww1.microchip.com/downloads/en/DeviceDoc/60001525A.pdf].
 %http://www.emc.ufg.br/~jwilson/teoria.html 
-%https://docente.ifsc.edu.br/rafael.grebogi/MaterialDidatico/Mecatronica/Microcontroladores/ebook%20-%20microcontrolador%208051-%20detalhado.pdf [Nicolosi, Denys E. C. Microcontrolador 8051 detalhado, 6a Ed. Editora Érica]
-%https://inf.ufes.br/~zegonc/material/Introducao_a_Computacao/CPU_Microprocessadores_8085.pdf
-%[http://microchipdeveloper.com/8bit:dac]
-%[Gustavo Souto de Sá e Souza. Microcontroladores PIC. 2018. 87 slides. Disponivel em http://www.emc.ufg.br/~jwilson/pdf/4_Micro_Parte_4_(PIC)_Introducao.pdf]
 %http://www.emc.ufg.br/~jwilson/pdf/Notas_de_Aula_de_Micro.pdf
-%[https://docente.ifsc.edu.br/rafael.grebogi/MaterialDidatico/Mecatronica/Microcontroladores/ebook%20-%20microcontrolador%208051-%20detalhado.pdf].
-%[http://ww1.microchip.com/downloads/en/DeviceDoc/30325b.pdf]
-%[http://meusite.mackenzie.br/professor_cucci/ManualSemaforos2014.pdf]. 
-%[Rudolf F. Graf (1999). Modern dictionary of electronics. Newnes. ISBN 0-7506-9866-7.]
-% [M.D. Singh, K.B. Khanchandani, Power Electronics, Second Edition, Tata McGraw-Hill, New Delhi, 2007, pages 148-152]
-%http://www.cetsp.com.br/media/20650/nt%20163%20revisado.pdf
+%https://civil808.com/sites/default/files/field/files/node_3951-roger_roess_elena_prassas_william_mcshane_trafbookzz.org_.pdf
 
-@misc {normabr,
-    author  = "Associação Brasileira de Normas Técnicas",
-    title   = "{ABNT NBR ISO/CIE} 8995-1",
-    year    = "2013",
-    note    = "Iluminação de ambientes de trabalho. Parte 1: Interior"
+% CITAÇÂO DE SITE PARA SEGUIR
+@MISC{lei,
+    author = "{BRASIL}",
+    title = "Código de Trânsito Brasileiro",
+    year = "1997",
+    howpublished = "\url{http://www.planalto.gov.br/ccivil_03/LEIS/L9503.htm}",
+    note = "[Online; acessado em 27 de julho de 2018]"
 }
 
-@MISC {norma,
-    author = "Ministério do Trabalho",
-    title  = "{NORMA REGULAMENTADORA 17}",
-    year   = "1990",
-    note   = "Ergonomia"
+@MISC{embedded,
+    author = "{Mehl, Ewaldo Luiz de Mattos}",
+    title = "Sistemas Eletrônicos Embarcados",
+    year = "2011",
+    howpublished = "\url{http://www.eletrica.ufpr.br/mehl/te200/aulas/embarcados.pdf}",
+    note = "[Online; acessado em 2 de julho de 2018]"
 }
 
-@ARTICLE {milk,
-    author  = "Robertson, D. I. and  Bretherton, R. D.",
-    title   = "{Optimizing Networks of Traffic Signals in Real Time - The SCOOT Method}",
-    journal = "IEEE Transactions on Vehicular Technology",
+@MISC{recife,
+    author = "{Jornal do Comércio}",
+    title = "Recife, a capital com o trânsito mais lento do País",
+    year = "2018",
+    howpublished = "\url{http://jc.ne10.uol.com.br/blogs/deolhonotransito/2018/03/27/recife-capital-com-o-transito-mais-lento-do-pais-de-novo/}",
+    note = "[Online; acessado em 1 de setembro de 2018]"
+}
+@MISC{nota_tecnica,
+    author = "{Ming, S. Hsien}",
+    title = "Uma proposta para critérios de implantação de semáforos de pedestres",
+    year = "1993",
+    howpublished = "\url{http://www.cetsp.com.br/media/20650/nt\%20163\%20revisado.pdf}",
+    note = "[Online; acessado em 13 de julho de 2018]"
+}
+
+@MISC{slides,
+    author = "Gustavo Souto de Sá e Souza",
+    title = "Microcontroladores PIC",
+    year = "2018",
+    howpublished = "\url{http://www.emc.ufg.br/~jwilson/pdf/4_Micro_Parte_4_(PIC)_Introducao.pdf}",
+    note = "[Online; acessado em 20 de setembro de 2018]"
+}
+
+@MISC{areacontrol,
+    author = "Mathew, Tom V.",
+    title = "Area Traffic Control. Lecture Notes in Transportation Systems Engineering",
+    year = "2018",
+    howpublished = "\url{https://www.civil.iitb.ac.in/tvm/nptel/tselnw61.pdf}",
+    note = "[Online; acessado em 30 de outubro de 2018]"
+}
+
+@MANUAL{CET,
+    title = "Manual de Sinalização Urbana",
+    organization = "{Compainha de Engenharia de Tráfego}",
+    year = "2012",
+    edition = "01"
+}
+
+@MANUAL{sinalizacao,
+    title = "{Manual Brasileiro de Sinalização de Trânsito. Volume V – Sinalização Semafórica}",
+    organization = "{Câmara  Temática  de Engenharia  de  Tráfego}",
+    year = "2014",
+    edition = "01",
+}
+
+@MANUAL{PIC,
+    title = "{PIC16F7X Data Sheet}",
+    organization = "{Microchip}",
+    year = "2002",
+}
+
+@MANUAL{DAC,
+    title = "{Digital to Analog Converter (DAC) Module - 8-bit MCU}",
+    organization = "{Microchip}",
+    year = "2018",
+}
+
+@MANUAL{clock,
+    title = "{32-BIT ARM-BASED MICROPROCESSORS}",
+    organization = "{Microchip}",
+    year = "2017",
+}
+
+@book{manual3,
+  title={Manual de direção defensiva},
+  author={DENATRAN},
+  year={2005},
+  publisher={Fundação Carlos Chagas}
+}
+
+@book{8051,
+  title={Microcontrolador 8051 detalhado},
+  author={Nicolosi, Denys E. C.},
+  year={2000},
+  publisher={Editora Érica}
+}
+
+@book{book,
+  title={Power Electronics, Second Edition},
+  author={M.D. Singh, K.B. Khanchandani},
+  year={2007},
+  publisher={McGraw-Hill}
+}
+
+@book{book2,
+  title={Modern dictionary of electronics},
+  author={Graf, Rudolf F.},
+  year={1999},
+  publisher={Newnes}
+}
+
+@book{book3,
+  title={An Introduction to Microcomputers. Volume 1: Basic Concepts},
+  author={Osborne, Adam},
+  year={1980},
+  publisher={McGraw-Hill}
+}
+
+@book{book4,
+  title={Programming Embedded Systems in C and C++},
+  author={Barr, M.},
+  year={1999},
+  publisher={O'Reilly}
+}
+
+@book{book5,
+  title={Microcontroladores 8051: Teoria do hardware e do software / Aplicações em controle digital / Laboratório e simulação},
+  author={Gimenez, Salvador P.},
+  year={2002},
+  publisher={Pearson Education do Brasil Ltda}
+}
+%https://inf.ufes.br/~zegonc/material/Introducao_a_Computacao/CPU_Microprocessadores_8085.pdf
+
+@ARTICLE {stress,
+    author  = "Tebaldi, E. e Ferreira, V.",
+    title   = "{Comportamentos no trânsito e causas da agressividade}",
+    journal = "Revista de Psicologia da UnC",
+    year    = "2004",
+}
+
+@ARTICLE {stress2,
+    author  = "{Zerbini, T. et al}",
+    title   = "{Trânsito como fator estressor para os trabalhadores}",
+    journal = "Saúde, Ética \& Justiça",
+    year    = "2009",
+}
+
+@ARTICLE {stress3,
+    author  = "De Souza Pontes, L. R. e Cury Maciel, J. S.",
+    title   = "{O estresse como fator gerador de acidentes e consequente aumento da falta de mobilidade urbana}",
+    journal = "International Symposium on Project Management, Innovation and Sustainability",
+    year    = "2017",
+}
+
+@ARTICLE {intel,
+    author  = "Frederico Faggin",
+    title   = "{The MOS Silicon Gate Technology and the First Microprocessors}",
+    journal = "{La Rivista del Nuovo Cimento, Società Italiana di Fisica}",
+    year    = "2015",
+}
+
+@ARTICLE {scoot,
+    author  = "{Robertson, D. I. and Bretherton, R. D.}",
+    title   = "{Optimizing networks of traffic signals in real time - the SCOOT method}",
+    journal = "{IEEE Transactions on Vehicular Technology}",
     year    = "1991",
 }
 
-@book{redes,
-  title={Computer Networks},
-  author={Tanenbaum, A.S. and Stallings, W.},
-  year={2009},
-  publisher={Pearson Education, Limited}
+@ARTICLE {scat,
+    author  = "{Sims, A. G. and Dobinson, K. W.}",
+    title   = "{The Sydney coordinated adaptive traffic (SCAT) system philosophy and benefits}",
+    journal = "{IEEE Transactions on Vehicular Technology}",
+    year    = "1980",
 }
 
-@ARTICLE {wifi,
-    author  = "E. Perahia",
-    title   = "{IEEE} 802.11n Development: History, Process, and Technology",
-    journal = "IEEE Communications Magazine",
-    year    = "2008",
-    volume  = "46",
-    number  = "7",
-    pages   = "48-55",
-    month   = "jul"
-}
-
-% CITAÇÂO DE SITE PARA SEGUIR
-@misc{ oasis,
-    author = "{OASIS}",
-    title = "Organization for the {Advancement} of {Structured} {Information} {Standards}",
-    year = "2018",
-    howpublished = "\url{https://www.oasis-open.org}",
-    note = "[Online; acessado em 23 de julho de 2018]"
-}
-  
-@MANUAL {esp,
-    title        = "ESP8266EX Datasheet",
-    organization = "Espressif Inc.",
-    edition      = "5.8",
-    year         = "2018"
-}
-
-@manual {tip122,
-    title        = "Darlington, 5 Ampere, Complementary Silicon, Power Transistors, 65W",
-    organization = "{ON} Semiconductor",
-    edition      = "9",
-    month        = "nov",
-    year         = "2014",
-    note         = "{TIP122}"
-}
-
-@BOOK {led,
-    author    = "E. Fred Schubert",
-    title     = "Light-Emitting Diodes",
-    publisher = "Rensselaer Polytechnic Institute",
-    year      = "2018",
-    volume    = "3",
-    address   = "Troy, New York, USA"
-}
-
-@book {rezende,
-    author      = "Sergio M. Rezende",
-    title       = "Materiais e Dispoisitivos Eletrônicos",
-    publisher   = "Editora Livraria da Física",
-    year        = "2004",
-    volume      = "2",
-    adress      = "São Paulo"
-}
-
-@misc{arduino,
-    author = "{The {Arduino} team}",
-    title = "Arduino",
-    year = "2018",
-    howpublished = "\url{https://www.arduino.cc}",
-    note = "Online; acessado em 28 de julho de 2018"
-}
-
-@misc{espwifi,
-    author = "Ivan Grokhotkov and Michael Molinari",
-    title = "ESP8266 Community",
-    year = "2018",
-    howpublished = "\url{https://github.com/esp8266}",
-    note = "Online; acessado em 28 de julho de 2018"
-}
-
-@misc{wifimng,
-    author = "Tzapu",
-    title = "ESP8266 WiFi Manager",
-    year = "2018",
-    howpublished = "\url{https://tzapu.com/esp8266-wifi-connection-manager-library-arduino-ide/}",
-    note = "Online; acessado em 28 de julho de 2018"
-}
-
-@misc{adafruit,
-    author = "Adafruit {INC.}",
-    title = "Adafruit {IO}",
-    year = "2018",
-    howpublished = "\url{https://io.adafruit.com}",
-    note = "Online; acessado em 28 de julho de 2018"
-}
-
-@misc {ldr,
-    title        = "{RS Components} {Inc.}, {Light} dependent resistors",
-    organization = "{RS Components} Inc.",
-    year         = "1997",
-    howpublished = "\url{https://components101.com/sites/default/files/component_datasheet/LDR\%20Datasheet.pdf}"
-}
-
-@misc{dash,
-    author = "Google",
-    title = "Play {Store}",
-    year = "2018",
-    howpublished = "\url{https://play.google.com/store/apps/details?id=net.routix.mqttdash&hl=pt_BR}"
+@ARTICLE {adaptive,
+    author  = "{Mirchandani, P. and Head, L.}",
+    title   = "{A real-time traffic signal control system: architecture, algorithms, and analysis}",
+    journal = "{Transportation Research Part C: Emerging Technologies}",
+    year    = "2001",
 }
