--- a/resumo.tex
+++ b/resumo.tex
@@ -1,4 +1,6 @@
 O trânsito é um elemento presente na rotina de todas as pessoas que circulam por ambientes urbanos, seja como motorista, passageiro ou pedestre. Para assegurar segurança e boa fluidez na locomoção dessas pessoas, é necessário que haja um controle dos aspectos que ditam os fluxos nas vias.
-Esse trabalho apresenta soluções 
+Esse trabalho apresenta um conjunto de sistemas, com funcionalidades específicas, que integrados em um único equipamento, têm por funcionalidade o controle de um cruzamento veicular, funcionando de forma autônoma, após configurados. O equipamento é capaz de realizar o controle em modo de tempos fixos, pré-definidos, e em modo adaptativo, no qual o sistema se adapta ao trânsito, em tempo real.
 
-Foram realizadas simulações para demonstrar o impacto do sistema proposto sob diferentes configurações.
+Além de apresentar o equipamento responsável pelo controle semafórico, foram realizadas simulações para demonstrar o impacto causado em um cruzamento com fluxos veiculares em diferentes sentidos. As simulações foram realizadas com quatro cenários distintos, representando diferentes modos de funcionamento do equipamento.
+Os resultados obtidos das simulações demonstraram um impacto positivo do equipamento no cruzamento semafórico, tanto em funcionamento de tempos fixos, como em modo adaptativo de tempo real.
+
