--- a/biblio.bib
+++ b/biblio.bib
@@ -24,6 +24,8 @@
 %[http://microchipdeveloper.com/8bit:dac]
 %https://inf.ufes.br/~zegonc/material/Introducao_a_Computacao/CPU_Microprocessadores_8085.pdf
 %[http://ww1.microchip.com/downloads/en/DeviceDoc/60001525A.pdf].
+%http://www.sumo.dlr.de/pdf/sysmea_v5_n34_2012_4.pdf
+% "Recent Development and Applications of SUMO - Simulation of Urban MObility"; Daniel Krajzewicz, Jakob Erdmann, Michael Behrisch, and Laura Bieker. International Journal On Advances in Systems and Measurements, 5 (3&4):128-138, December 2012.
 
 
 %[http://www.denatran.gov.br/index.php/estatistica/610-frota-2017].
@@ -32,6 +34,7 @@
 %http://www.emc.ufg.br/~jwilson/teoria.html 
 %http://www.emc.ufg.br/~jwilson/pdf/Notas_de_Aula_de_Micro.pdf
 %https://civil808.com/sites/default/files/field/files/node_3951-roger_roess_elena_prassas_william_mcshane_trafbookzz.org_.pdf
+%Car-following krauss model https://elib.dlr.de/115720/1/esm_bieker.pdf
 
 % CITAÇÂO DE SITE PARA SEGUIR
 @MISC{lei,
@@ -163,6 +166,13 @@
 }
 %https://inf.ufes.br/~zegonc/material/Introducao_a_Computacao/CPU_Microprocessadores_8085.pdf
 
+@book{book6,
+  title={Traffic Engineering},
+  author={Roess, Roger P. et al.},
+  year={2011},
+  publisher={Pearson}
+}
+
 @ARTICLE {stress,
     author  = "Tebaldi, E. e Ferreira, V.",
     title   = "{Comportamentos no trânsito e causas da agressividade}",
@@ -210,4 +220,18 @@
     title   = "{A real-time traffic signal control system: architecture, algorithms, and analysis}",
     journal = "{Transportation Research Part C: Emerging Technologies}",
     year    = "2001",
+}
+
+@ARTICLE {sumo,
+    author  = "{Krajzewicz, Daniel et al.}",
+    title   = "{Recent Development and Applications of SUMO - Simulation of Urban MObility}",
+    journal = "{International Journal On Advances in Systems and Measurements}",
+    year    = "2012",
+}
+
+@ARTICLE {krauss,
+    author  = "{Bieker-Walz, Laura et al.}",
+    title   = "{Evaluation of car-following-models at controlled intersections}",
+    journal = "{ESM 2017 European Simulation and Modelling Conference}",
+    year    = "2017",
 }
